# itsatrap

./: CMakeLists.txt  CMakeLists.txt.user.e99d394  README.md
MAIN/: CMakeLists.txt  main.cpp
asset/textures/: photoshop ver.psd
asset/xmlFiles/: board.xml
glimac/: CMakeLists.txt
glimac/include/glimac/: FireflyCamera.hpp  TrackballCamera.hpp
glimac/src/: FireflyCamera.cpp  TrackballCamera.cpp
include/BOARD/: Board.h  Board.hpp  Cube.hpp  Cylinder.h  Cylinder.hpp  cube.hpp
include/GAME/: game.hpp  oops.txt
include/GAMESTATE/: gamestate.hpp  playstate.hpp  titlestate.hpp
include/GLTOOLS/: Camera.h  Camera.hpp  FreeFlyCamera.hpp  IBO.hpp  Texture.hpp  TrackBallCamera.h  TrackBallCamera.hpp  VAO.h  VAO.hpp  VBO.h  VBO.hpp
include/ITEM/: oops.txt
include/OBJECT/: character.h  character.hpp  fruits.h  fruits.hpp  ghost.h  ghost.hpp  item.h  item.hpp  object.h  object.hpp  pacgomme.h  pacgomme.hpp  pacman.h  pacman.hpp  superpacgomme.h  superpacgomme.hpp
src/: CMakeLists.txt  exo1_triangle_blanc.cpp  main.cpp
src/BOARD/: Board.cpp  Cube.cpp  Cylinder.cpp  cube.cpp
src/CHARACTER/: oops.txt
src/GAME/: game.cpp  game.hpp
src/GAMESTATE/: gamestate.hpp  playstate.cpp  titlestate.cpp
src/GLTOOLS/: FreeFlyCamera.cpp  IBO.cpp  Texture.cpp  TrackBallCamera.cpp  VAO.cpp  VBO.cpp
src/OBJECT/: Character.cpp  Item.cpp  pacgomme.cpp  pacman.cpp
src/Shaders/: 3D.vs.glsl  cube3D.fs.glsl  gom3D.fs.glsl  normals.fs.glsl
